Add mkdocs markdown extensions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,3 +6,16 @@ theme:
   name: material
   palette:
     scheme: slate
+# Extensions.
+markdown_extensions:
+  - footnotes # https://squidfunk.github.io/mkdocs-material/reference/footnotes/
+  - attr_list # https://squidfunk.github.io/mkdocs-material/setup/extensions/python-markdown/#attribute-lists
+  - pymdownx.highlight # https://facelessuser.github.io/pymdown-extensions/extensions/highlight/
+  - pymdownx.superfences # https://facelessuser.github.io/pymdown-extensions/extensions/superfences/
+  - pymdownx.details # https://facelessuser.github.io/pymdown-extensions/extensions/details/
+  - pymdownx.magiclink # https://facelessuser.github.io/pymdown-extensions/extensions/magiclink/
+  - pymdownx.tasklist # https://facelessuser.github.io/pymdown-extensions/extensions/tasklist/
+  - pymdownx.emoji # https://facelessuser.github.io/pymdown-extensions/extensions/emoji/
+  - admonition # https://squidfunk.github.io/mkdocs-material/reference/admonitions/
+  - toc:
+    permalink: true # https://python-markdown.github.io/extensions/toc/
