--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ mkdocs-material>=8.1.7
 
 # (Obsidian) Wikilinks support for mkdocs.
 mkdocs-roamlinks-plugin>=0.1.3
+
+# Exclude files in the documentation folder from being built and deployed.
+mkdocs-exclude>=1.0.2
