Add MkDocs theme features

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,15 @@ docs_dir: ./docs
 
 theme:
   name: material
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
+    - navigation.top
+    - toc.follow
+    - toc.integrate
   palette:
     scheme: slate
 
